--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="lunchApp">
+<html ng-app="LunchCheck">
 
 <head>
     <title>Lunch Checker</title>
@@ -14,7 +14,7 @@
     </style>
 </head>
 
-<body ng-app="lunchApp">
+<body ng-app="LunchCheck">
     <div ng-controller="LunchController">
         <h1>Lunch Checker</h1>
 
