--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body ng-app="LunchCheck">
-    <div ng-controller="LunchController">
+    <div ng-controller="LunchCheckController">
         <h1>Lunch Checker</h1>
 
         <div>
