--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -22,7 +22,7 @@
             <input id="lunch-menu" type="text" ng-model="lunchList" placeholder="list of dishes(comma separated)you want  for lunch" >
         </div>
         <div>
-            <button  ng-click="splitLunch(lunchList)">Check If Too Much</button>
+            <button  ng-click="checkLunch(lunchList)">Check If Too Much</button>
         </div>
         <div>
             {{obj}}
